// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <div>
    <input
      class="RadioButton-sc-17mep65-0 NmGfr"
      color="success"
      type="radio"
    />
  </div>
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <div>
    <input
      class="RadioButton-sc-17mep65-0 dqUNMf"
      color="danger"
      type="radio"
    />
  </div>
</div>
`;

exports[`RadioButton should render a primary color 1`] = `
<div>
  <div>
    <input
      class="RadioButton-sc-17mep65-0 VXxqQ"
      color="primary"
      type="radio"
    />
  </div>
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <div>
    <input
      class="RadioButton-sc-17mep65-0 NmGfr"
      color="success"
      type="radio"
    />
  </div>
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <div>
    <input
      class="RadioButton-sc-17mep65-0 iJuSxW"
      color="warning"
      type="radio"
    />
  </div>
</div>
`;
